Re-does the head generator gui * adds the boolean field `requested` in head model in the object `textures` and `colors`, by default it is true and optional, when set to true the parameter is added in head generator to be modified by the user * add 1 paintable head, add 8 models heads, 2 textures heads * Removes the watermark from the heads * Now you can add textures from parameters in head generator, you can be more than one, also you can use several colors instead of only 1 in the parameters * Renamed `layers` to `compound` from head generator, also improved to support models heads and paintable heads