@@ -5,72 +5,66 @@ import fzmm.zailer.me.client.FzmmClient;
 import fzmm.zailer.me.client.gui.BaseFzmmScreen;
 import fzmm.zailer.me.client.gui.components.BooleanButton;
 import fzmm.zailer.me.client.gui.components.EnumWidget;
+import fzmm.zailer.me.client.gui.components.containers.VerticalGridLayout;
 import fzmm.zailer.me.client.gui.components.image.mode.SkinMode;
 import fzmm.zailer.me.client.gui.components.row.BooleanRow;
 import fzmm.zailer.me.client.gui.components.row.ButtonRow;
 import fzmm.zailer.me.client.gui.components.row.TextBoxRow;
 import fzmm.zailer.me.client.gui.components.row.image.ImageRows;
 import fzmm.zailer.me.client.gui.components.row.image.ImageRowsElements;
+import fzmm.zailer.me.client.gui.headgenerator.category.IHeadCategory;
 import fzmm.zailer.me.client.gui.headgenerator.components.AbstractHeadListEntry;
 import fzmm.zailer.me.client.gui.headgenerator.components.HeadComponentEntry;
-import fzmm.zailer.me.client.gui.headgenerator.components.HeadLayerComponentEntry;
+import fzmm.zailer.me.client.gui.headgenerator.components.HeadCompoundComponentEntry;
 import fzmm.zailer.me.client.gui.utils.IMementoObject;
 import fzmm.zailer.me.client.gui.utils.IMementoScreen;
 import fzmm.zailer.me.client.logic.headGenerator.AbstractHeadEntry;
-import fzmm.zailer.me.client.logic.headGenerator.HeadGenerator;
 import fzmm.zailer.me.client.logic.headGenerator.HeadGeneratorResources;
-import fzmm.zailer.me.client.logic.headGenerator.texture.HeadTextureEntry;
 import fzmm.zailer.me.utils.FzmmUtils;
 import fzmm.zailer.me.utils.FzmmWikiConstants;
 import fzmm.zailer.me.utils.HeadUtils;
 import fzmm.zailer.me.utils.ImageUtils;
+import fzmm.zailer.me.utils.list.IListEntry;
+import fzmm.zailer.me.utils.list.ListUtils;
+import io.wispforest.owo.ui.component.ButtonComponent;
 import io.wispforest.owo.ui.component.Components;
+import io.wispforest.owo.ui.component.DropdownComponent;
+import io.wispforest.owo.ui.component.LabelComponent;
+import io.wispforest.owo.ui.container.CollapsibleContainer;
 import io.wispforest.owo.ui.container.FlowLayout;
-import io.wispforest.owo.ui.core.Component;
-import io.wispforest.owo.ui.core.HorizontalAlignment;
-import io.wispforest.owo.ui.core.Insets;
-import io.wispforest.owo.ui.core.Sizing;
+import io.wispforest.owo.ui.core.*;
 import net.fabricmc.loader.api.FabricLoader;
-import net.minecraft.client.MinecraftClient;
-import net.minecraft.client.gui.hud.ChatHud;
 import net.minecraft.client.gui.screen.ConfirmLinkScreen;
 import net.minecraft.client.gui.screen.Screen;
 import net.minecraft.client.gui.widget.ButtonWidget;
 import net.minecraft.client.gui.widget.TextFieldWidget;
-import net.minecraft.client.util.ScreenshotRecorder;
-import net.minecraft.text.ClickEvent;
-import net.minecraft.text.MutableText;
+import net.minecraft.client.util.Window;
 import net.minecraft.text.Style;
 import net.minecraft.text.Text;
-import net.minecraft.util.Formatting;
 import net.minecraft.util.Util;
 import org.jetbrains.annotations.Nullable;
 
-import javax.imageio.ImageIO;
 import java.awt.image.BufferedImage;
-import java.io.File;
-import java.io.IOException;
 import java.nio.file.Path;
 import java.util.*;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 
-@SuppressWarnings("UnstableApiUsage")
 public class HeadGeneratorScreen extends BaseFzmmScreen implements IMementoScreen {
-    private static final Path SKIN_SAVE_FOLDER_PATH = Path.of(FabricLoader.getInstance().getGameDir().toString(), FzmmClient.MOD_ID, "skins");
+    private static final int COMPOUND_HEAD_LAYOUT_WIDTH = 60;
+    public static final Path SKIN_SAVE_FOLDER_PATH = Path.of(FabricLoader.getInstance().getGameDir().toString(), FzmmClient.MOD_ID, "skins");
     private static final String SKIN_ID = "skin";
     private static final String SKIN_SOURCE_TYPE_ID = "skinSourceType";
     private static final String HEAD_NAME_ID = "headName";
     private static final String OVERLAP_HAT_LAYER_ID = "overlapHatLayer";
     private static final String SEARCH_ID = "search";
-    private static final String HEAD_LIST_ID = "head-list";
-    private static final String LAYER_LIST_ID = "layer-list";
-    private static final String GIVE_MERGED_HEAD_ID = "give";
-    private static final String SAVE_SKIN_ID = "save-skin";
+    private static final String HEAD_GRID_ID = "head-grid";
+    private static final String HEADS_LAYOUT_ID = "heads-layout";
+    private static final String CONTENT_LAYOUT_ID = "content-layout";
+    private static final String COMPOUND_HEADS_LAYOUT_ID = "compound-heads-layout";
     private static final String OPEN_SKIN_FOLDER_ID = "open-folder";
     private static final String TOGGLE_FAVORITE_LIST_ID = "toggle-favorite-list";
-    private static final String HEAD_GENERATION_METHOD_ID = "head-generation-method";
+    private static final String HEAD_CATEGORY_ID = "head-category-collapsible";
     private static final String WIKI_BUTTON_ID = "wiki-button";
     private static HeadGeneratorMemento memento = null;
     private final Set<String> favoritesHeadsOnOpenScreen;
@@ -78,14 +72,18 @@ public class HeadGeneratorScreen extends BaseFzmmScreen implements IMementoScree
     private TextFieldWidget headNameField;
     private BooleanButton overlapHatLayerButton;
     private TextFieldWidget searchField;
-    private FlowLayout headListLayout;
-    private FlowLayout layerListLayout;
-    private ButtonWidget giveMergedHeadButton;
+    private List<HeadComponentEntry> headComponentEntries;
+    private List<HeadCompoundComponentEntry> headCompoundComponentEntries;
+    private VerticalGridLayout headGridLayout;
+    private FlowLayout compoundHeadsLayout;
     private ButtonWidget toggleFavoriteList;
-    private EnumWidget headGenerationMethod;
     private boolean showFavorites;
     private BufferedImage baseSkin;
+    private BufferedImage gridBaseSkin;
     private String previousSkinName;
+    private IHeadCategory selectedCategory;
+    private ButtonComponent giveButton;
+    private Animation.Composed compoundExpandAnimation;
 
     public HeadGeneratorScreen(@Nullable Screen parent) {
         super("head_generator", "headGenerator", parent);
@@ -95,32 +93,58 @@ public class HeadGeneratorScreen extends BaseFzmmScreen implements IMementoScree
     @Override
     @SuppressWarnings("ConstantConditions")
     protected void setupButtonsCallbacks(FlowLayout rootComponent) {
+        this.headComponentEntries = new ArrayList<>();
+        this.headCompoundComponentEntries = new ArrayList<>();
+        this.baseSkin = new BufferedImage(64, 64, BufferedImage.TYPE_INT_ARGB);
+        this.gridBaseSkin = this.baseSkin;
         //general
         this.skinElements = ImageRows.setup(rootComponent, SKIN_ID, SKIN_SOURCE_TYPE_ID, SkinMode.NAME);
         this.skinElements.imageButton().setButtonCallback(this::imageCallback);
         this.previousSkinName = "";
         this.headNameField = TextBoxRow.setup(rootComponent, HEAD_NAME_ID, "", 512);
         this.skinElements.valueField().onChanged().subscribe(this::onChangeSkinField);
-        this.overlapHatLayerButton = BooleanRow.setup(rootComponent, OVERLAP_HAT_LAYER_ID, FzmmClient.CONFIG.headGenerator.defaultOverlapHatLayer(), button -> this.client.execute(this::updatePreviews));
-        this.searchField = TextBoxRow.setup(rootComponent, SEARCH_ID, "", 128, s -> this.applyFilters());
-        this.headListLayout = rootComponent.childById(FlowLayout.class, HEAD_LIST_ID);
-        this.layerListLayout = rootComponent.childById(FlowLayout.class, LAYER_LIST_ID);
-        checkNull(this.headListLayout, "flow-layout", HEAD_LIST_ID);
-        checkNull(this.layerListLayout, "flow-layout", LAYER_LIST_ID);
+        this.headGridLayout = rootComponent.childById(VerticalGridLayout.class, HEAD_GRID_ID);
+        checkNull(this.headGridLayout, "vertical-grid-layout", HEAD_GRID_ID);
+        this.compoundHeadsLayout = rootComponent.childById(FlowLayout.class, COMPOUND_HEADS_LAYOUT_ID);
+        checkNull(this.compoundHeadsLayout, "flow-layout", COMPOUND_HEADS_LAYOUT_ID);
+
+        FlowLayout contentLayout = rootComponent.childById(FlowLayout.class, CONTENT_LAYOUT_ID);
+        checkNull(contentLayout, "flow-layout", CONTENT_LAYOUT_ID);
+        FlowLayout headsLayout = rootComponent.childById(FlowLayout.class, HEADS_LAYOUT_ID);
+        checkNull(headsLayout, "flow-layout", HEADS_LAYOUT_ID);
+        // owo-lib doesn't let to make Sizing.fill and Sizing.fill animations,
+        // so I have to remove the percentage of compoundHeadsWidth on the screen size
+        // note: this means that if the screen resolution changes it will be wrongly resized while expanded
+        Window window = this.client.getWindow();
+        int contentGap = (int) Math.floor(window.getScaleFactor() * contentLayout.gap());
+        int newHeadsLayoutWidth = 99 - (int) Math.floor(((COMPOUND_HEAD_LAYOUT_WIDTH + contentGap * contentLayout.children().size() - 1) / (float) window.getScaledWidth()) * 100);
+        Animation<Sizing> headsLayoutAnimation = headsLayout.horizontalSizing().animate(800, Easing.CUBIC, Sizing.fill(newHeadsLayoutWidth));
+        Animation<Sizing> compoundHeadsLayoutAnimation = this.compoundHeadsLayout.horizontalSizing().animate(800, Easing.CUBIC, Sizing.fixed(COMPOUND_HEAD_LAYOUT_WIDTH));
+        this.compoundExpandAnimation = Animation.compose(headsLayoutAnimation, compoundHeadsLayoutAnimation);
+
         //bottom buttons
-        this.giveMergedHeadButton = ButtonRow.setup(rootComponent, ButtonRow.getButtonId(GIVE_MERGED_HEAD_ID), true, button -> this.getMergedHead().ifPresent(bufferedImage -> this.giveHead(bufferedImage, "merged")));
-        ButtonRow.setup(rootComponent, ButtonRow.getButtonId(SAVE_SKIN_ID), true, this::saveSkinExecute);
         ButtonRow.setup(rootComponent, ButtonRow.getButtonId(OPEN_SKIN_FOLDER_ID), true, button -> Util.getOperatingSystem().open(SKIN_SAVE_FOLDER_PATH.toFile()));
-        //other buttons
-        this.headGenerationMethod = rootComponent.childById(EnumWidget.class, HEAD_GENERATION_METHOD_ID);
-        checkNull(this.headGenerationMethod, "enum-option", HEAD_GENERATION_METHOD_ID);
-        this.headGenerationMethod.init(HeadGenerationMethod.TEXTURE);
-        this.headGenerationMethod.onPress(buttonComponent -> this.applyFilters());
-        this.headGenerationMethod.select(HeadGenerationMethod.TEXTURE.ordinal());
-        int maxHeadGenerationMethodWidth = 0;
-        for (var method : HeadGenerationMethod.values())
-            maxHeadGenerationMethodWidth = Math.max(maxHeadGenerationMethodWidth, this.textRenderer.getWidth(Text.translatable(method.getTranslationKey())) + BaseFzmmScreen.BUTTON_TEXT_PADDING);
-        this.headGenerationMethod.horizontalSizing(Sizing.fixed(maxHeadGenerationMethodWidth));
+
+        // nav var
+        this.searchField = TextBoxRow.setup(rootComponent, SEARCH_ID, "", 128, s -> this.applyFilters());
+        this.overlapHatLayerButton = BooleanRow.setup(rootComponent, OVERLAP_HAT_LAYER_ID, FzmmClient.CONFIG.headGenerator.defaultOverlapHatLayer(), button -> {
+            if (this.skinElements.imageButton().hasImage())
+                this.client.execute(this::updatePreviews);
+        });
+        this.overlapHatLayerButton.setContentHorizontalSizing();
+        CollapsibleContainer headCategoryCollapsible = rootComponent.childById(CollapsibleContainer.class, HEAD_CATEGORY_ID);
+        checkNull(headCategoryCollapsible, "collapsible", HEAD_CATEGORY_ID);
+        DropdownComponent headCategoryDropdown = Components.dropdown(Sizing.content());
+
+        for (var category : IHeadCategory.NATURAL_CATEGORIES) {
+            headCategoryDropdown.button(Text.translatable(category.getTranslationKey()), dropdownComponent -> {
+                this.selectedCategory = category;
+                this.applyFilters();
+            });
+        }
+        this.selectedCategory = IHeadCategory.NATURAL_CATEGORIES[0];
+        headCategoryCollapsible.child(headCategoryDropdown);
+        headCategoryDropdown.zIndex(1000);
 
         this.toggleFavoriteList = ButtonRow.setup(rootComponent, TOGGLE_FAVORITE_LIST_ID, true, buttonComponent -> this.toggleFavoriteListExecute());
         checkNull(this.toggleFavoriteList, "button", TOGGLE_FAVORITE_LIST_ID);
@@ -131,6 +155,7 @@ public class HeadGeneratorScreen extends BaseFzmmScreen implements IMementoScree
 
         ButtonRow.setup(rootComponent, WIKI_BUTTON_ID, true, buttonComponent -> this.wikiExecute());
 
+        this.tryLoadHeadEntries(rootComponent);
     }
 
     private void imageCallback(BufferedImage skinBase) {
@@ -149,74 +174,82 @@ public class HeadGeneratorScreen extends BaseFzmmScreen implements IMementoScree
             skinBase = ImageUtils.convertInSteveModel(skinBase, 1);
 
         this.baseSkin = skinBase;
+        this.gridBaseSkin = this.baseSkin;
 
-        this.client.execute(() -> {
-            this.tryFirstSkinLoad();
-            this.updatePreviews();
-        });
+        this.client.execute(this::updatePreviews);
     }
 
-    private void tryFirstSkinLoad() {
-        if (this.headListLayout.children().isEmpty()) {
+    private void tryLoadHeadEntries(FlowLayout rootComponent) {
+        if (this.headGridLayout.children().isEmpty()) {
             Set<AbstractHeadEntry> headDataSet = new HashSet<>();
             headDataSet.addAll(HeadGeneratorResources.loadHeadsTextures());
             headDataSet.addAll(HeadGeneratorResources.loadHeadsModels());
 
             if (headDataSet.size() == 0) {
-                Component label = Components.label(Text.translatable("fzmm.gui.headGenerator.label.noResults")
-                                .setStyle(Style.EMPTY.withColor(0xD83F27)))
-                        .horizontalTextAlignment(HorizontalAlignment.CENTER)
-                        .sizing(Sizing.fill(100), Sizing.content())
-                        .margins(Insets.top(4));
-                this.headListLayout.child(label);
+                this.addNoResultsMessage(rootComponent);
                 return;
             }
 
-            List<Component> headEntries = headDataSet.stream()
+            List<HeadComponentEntry> headEntries = headDataSet.stream()
                     .sorted(Comparator.comparing(AbstractHeadEntry::getDisplayName))
-                    .map(entry -> (Component) new HeadComponentEntry(entry, this))
-                    .collect(Collectors.toList());
+                    .map(entry -> new HeadComponentEntry(entry, this))
+                    .toList();
 
-            this.headListLayout.children(headEntries);
+            this.headComponentEntries.addAll(headEntries);
             this.applyFilters();
         }
 
-        if (this.layerListLayout.children().isEmpty()) {
-            BufferedImage emptyImage = new BufferedImage(64, 64, BufferedImage.TYPE_INT_ARGB);
-            HeadTextureEntry baseSkinData = new HeadTextureEntry(emptyImage, Text.translatable("fzmm.gui.headGenerator.label.baseSkin").getString(), "base");
-            this.addLayer(baseSkinData, false);
-        }
-
+        this.updatePreviews();
     }
+
+    private void addNoResultsMessage(FlowLayout parent) {
+        Component label = Components.label(Text.translatable("fzmm.gui.headGenerator.label.noResults")
+                        .setStyle(Style.EMPTY.withColor(0xD83F27)))
+                .horizontalTextAlignment(HorizontalAlignment.CENTER)
+                .sizing(Sizing.fill(100), Sizing.content())
+                .margins(Insets.top(4));
+        FlowLayout layout = parent.childById(FlowLayout.class, "no-results-label-layout");
+        checkNull(layout, "flow-layout", "no-results-label-layout");
+        layout.child(label);
+    }
+
 
     private void updatePreviews() {
         assert this.client != null;
 
         this.client.execute(() -> {
-            this.updatePreviews(this.headListLayout.children());
-            this.updatePreviews(this.layerListLayout.children());
+            BufferedImage previousPreview = this.baseSkin;
+            for (var headEntry : this.headCompoundComponentEntries) {
+                headEntry.update(previousPreview, this.overlapHatLayerButton());
+                previousPreview = headEntry.getPreview();
+            }
+            this.gridBaseSkin = previousPreview;
+
+            for (var headEntry : this.headComponentEntries) {
+                headEntry.update(this.gridBaseSkin, this.overlapHatLayerButton());
+            }
         });
+
     }
 
-    private void updatePreviews(List<Component> entries) {
-        for (var component : entries) {
-            if (component instanceof AbstractHeadListEntry headEntry)
-                headEntry.update(this.baseSkin, this.overlapHatLayerButton());
-        }
+    public BufferedImage getGridBaseSkin() {
+        return this.gridBaseSkin;
     }
 
     private void closeTextures() {
+        if (this.headGridLayout == null)
+            return;
+
         assert this.client != null;
         this.client.execute(() -> {
-            this.closeTextures(this.headListLayout.children());
-            this.closeTextures(this.layerListLayout.children());
+            this.closeTextures(this.headComponentEntries);
+            this.closeTextures(this.headCompoundComponentEntries);
         });
     }
 
-    private void closeTextures(List<Component> entries) {
-        for (var component : entries) {
-            if (component instanceof AbstractHeadListEntry headEntry)
-                headEntry.close();
+    private void closeTextures(List<? extends AbstractHeadListEntry> entries) {
+        for (var entry : entries) {
+            entry.close();
         }
     }
 
@@ -224,13 +257,15 @@ public class HeadGeneratorScreen extends BaseFzmmScreen implements IMementoScree
         if (this.searchField == null)
             return;
         String searchValue = this.searchField.getText().toLowerCase();
-        List<Component> componentList = this.headListLayout.children();
-        HeadGenerationMethod generationMethod = (HeadGenerationMethod) this.headGenerationMethod.getValue();
 
-        for (var component : componentList) {
-            if (component instanceof HeadComponentEntry headEntry)
-                headEntry.filter(searchValue, this.showFavorites, generationMethod);
+        for (var entry : this.headComponentEntries) {
+            entry.filter(searchValue, this.showFavorites, this.selectedCategory);
         }
+
+        List<HeadComponentEntry> newResults = new ArrayList<>(this.headComponentEntries);
+        newResults.removeIf(HeadComponentEntry::isHide);
+        this.headGridLayout.clearChildren();
+        this.headGridLayout.children(newResults);
     }
 
     public void giveHead(BufferedImage image, String textureName) {
@@ -251,102 +286,70 @@ public class HeadGeneratorScreen extends BaseFzmmScreen implements IMementoScree
         });
     }
 
-    private Optional<BufferedImage> getMergedHead() {
-        Optional<BufferedImage> optionalSkin = this.skinElements.imageButton().getImage();
-        if (optionalSkin.isEmpty())
-            return Optional.empty();
-        boolean onlyBaseSkin = this.layerListLayout.children().size() == 1;
-        HeadGenerator headGenerator;
-        BufferedImage skin = optionalSkin.get();
-        if (onlyBaseSkin) {
-            headGenerator = new HeadGenerator().addTexture(skin);
-        } else {
-            headGenerator = new HeadGenerator(skin, this.overlapHatLayerButton.enabled());
-        }
-
-        for (var entry : this.layerListLayout.children()) {
-            // it's a flowlayout so there can be any type of component here
-            if (!(entry instanceof HeadLayerComponentEntry layerEntry))
-                continue;
-
-            layerEntry.getHeadSkin().ifPresent(headGenerator::addTexture);
-        }
-
-        return Optional.of(headGenerator.getHeadTexture());
-    }
-
     public void setUndefinedDelay() {
         Text waitMessage = Text.translatable("fzmm.gui.headGenerator.wait");
-        this.updateButtons(this.getHeadEntries(), waitMessage, false);
-    }
-
-    private List<HeadComponentEntry> getHeadEntries() {
-        return this.headListLayout.children().stream().map(component -> (HeadComponentEntry) component).toList();
+        this.updateButton(waitMessage, false);
     }
 
     public void setDelay(int seconds) {
-        List<HeadComponentEntry> entryList = this.getHeadEntries();
-
         for (int i = 0; i != seconds; i++) {
             Text message = Text.translatable("fzmm.gui.headGenerator.wait_seconds", seconds - i);
-            CompletableFuture.delayedExecutor(i, TimeUnit.SECONDS).execute(() -> this.updateButtons(entryList, message, false));
+            CompletableFuture.delayedExecutor(i, TimeUnit.SECONDS).execute(() -> this.updateButton(message, false));
         }
 
-        CompletableFuture.delayedExecutor(seconds, TimeUnit.SECONDS).execute(() -> this.updateButtons(entryList, HeadComponentEntry.GIVE_BUTTON_TEXT, true));
+        CompletableFuture.delayedExecutor(seconds, TimeUnit.SECONDS).execute(() -> this.updateButton(HeadComponentEntry.GIVE_BUTTON_TEXT, true));
     }
 
-    public void updateButtons(List<HeadComponentEntry> entryList, Text message, boolean active) {
-        this.giveMergedHeadButton.active = active;
-        this.giveMergedHeadButton.setMessage(message);
-        for (var entry : entryList)
-            entry.updateGiveButton(active, message);
+    public void updateButton(Text message, boolean active) {
+        if (this.giveButton != null) {
+            this.giveButton.setMessage(message);
+            this.giveButton.active = active;
+        }
+    }
+
+    public void setCurrentGiveButton(ButtonComponent currentGiveButton) {
+        if (this.giveButton != null) {
+            Text message = this.giveButton.getMessage();
+            boolean active = this.giveButton.active;
+            this.giveButton = currentGiveButton;
+            this.updateButton(message, active);
+        } else {
+            this.giveButton = currentGiveButton;
+        }
     }
 
     public String getHeadName() {
         return this.headNameField.getText();
     }
 
-    public void addLayer(AbstractHeadEntry headData) {
-        this.addLayer(headData, true);
-    }
+    public void addCompound(AbstractHeadEntry headData) {
+        assert this.client != null;
 
-    public void addLayer(AbstractHeadEntry headData, boolean active) {
-        HeadLayerComponentEntry entry = new HeadLayerComponentEntry(headData, this.layerListLayout);
-        entry.setEnabled(active);
-        entry.update(this.baseSkin, this.overlapHatLayerButton());
-        this.layerListLayout.child(entry);
-    }
-
-    public void saveSkinExecute(ButtonWidget button) {
-        Optional<BufferedImage> optionalSkin = this.getMergedHead();
-        ChatHud chatHud = MinecraftClient.getInstance().inGameHud.getChatHud();
-        if (optionalSkin.isEmpty()) {
-            chatHud.addMessage(Text.translatable("fzmm.gui.headGenerator.saveSkin.thereIsNoSkin")
-                    .setStyle(Style.EMPTY.withColor(Formatting.RED)));
-            return;
+        List<Component> compoundHeads = this.compoundHeadsLayout.children();
+        if (compoundHeads.isEmpty()) {
+            this.compoundExpandAnimation.forwards();
+            this.compoundHeadsLayout.surface(Surface.DARK_PANEL);
         }
 
-        BufferedImage skin = optionalSkin.get();
-        File skinFolder = SKIN_SAVE_FOLDER_PATH.toFile();
-        if (skinFolder.mkdirs())
-            FzmmClient.LOGGER.info("Skin save folder created");
+        HeadCompoundComponentEntry entry = new HeadCompoundComponentEntry(headData, this.compoundHeadsLayout, this);
 
-        File file = ScreenshotRecorder.getScreenshotFilename(skinFolder);
-        try {
-            ImageIO.write(skin, "png", file);
-            MutableText fileMessage = Text.literal(file.getName())
-                    .setStyle(Style.EMPTY.withUnderline(true).withClickEvent(new ClickEvent(ClickEvent.Action.OPEN_FILE, file.getAbsolutePath())));
-            chatHud.addMessage(Text.translatable("fzmm.gui.headGenerator.saveSkin.saved", fileMessage)
-                    .setStyle(Style.EMPTY.withColor(FzmmClient.CHAT_BASE_COLOR)));
-        } catch (IOException e) {
-            FzmmClient.LOGGER.error("Unexpected error saving the skin", e);
-            chatHud.addMessage(Text.translatable("fzmm.gui.headGenerator.saveSkin.saveError")
-                    .setStyle(Style.EMPTY.withColor(Formatting.RED)));
-        }
+        this.headCompoundComponentEntries.add(entry);
+        this.compoundHeadsLayout.child(entry);
+        this.updatePreviews();
     }
 
-    public BufferedImage getBaseSkin() {
-        return this.baseSkin;
+    public void removeCompound(HeadCompoundComponentEntry entry) {
+        assert this.parent != null;
+        entry.close();
+        this.compoundHeadsLayout.removeChild(entry);
+        this.headCompoundComponentEntries.remove(entry);
+
+        if (this.headCompoundComponentEntries.isEmpty()) {
+            this.compoundExpandAnimation.backwards();
+            this.compoundHeadsLayout.surface(Surface.BLANK);
+        }
+
+        this.updatePreviews();
     }
 
     private void toggleFavoriteListExecute() {
@@ -372,6 +375,30 @@ public class HeadGeneratorScreen extends BaseFzmmScreen implements IMementoScree
 
     public boolean overlapHatLayerButton() {
         return this.overlapHatLayerButton.enabled();
+    }
+
+    public void upCompoundEntry(AbstractHeadListEntry entry) {
+        List<IListEntry<AbstractHeadEntry>> list = new ArrayList<>();
+        for (var component : this.compoundHeadsLayout.children()) {
+            if (component instanceof AbstractHeadListEntry headEntry) {
+                list.add(headEntry);
+            }
+        }
+        ListUtils.upEntry(list, entry, () -> {
+        });
+        this.updatePreviews();
+    }
+
+    public void downCompoundEntry(AbstractHeadListEntry entry) {
+        List<IListEntry<AbstractHeadEntry>> list = new ArrayList<>();
+        for (var component : this.compoundHeadsLayout.children()) {
+            if (component instanceof AbstractHeadListEntry headEntry) {
+                list.add(headEntry);
+            }
+        }
+        ListUtils.downEntry(list, entry, () -> {
+        });
+        this.updatePreviews();
     }
 
     @Override
@@ -413,7 +440,7 @@ public class HeadGeneratorScreen extends BaseFzmmScreen implements IMementoScree
                 this.skinElements.valueField().getText(),
                 this.showFavorites,
                 this.overlapHatLayerButton.enabled(),
-                (HeadGenerationMethod) this.headGenerationMethod.getValue(),
+                this.selectedCategory,
                 this.searchField.getText()
         );
     }
@@ -429,13 +456,13 @@ public class HeadGeneratorScreen extends BaseFzmmScreen implements IMementoScree
         if (memento.showFavorites)
             this.toggleFavoriteListExecute();
         this.overlapHatLayerButton.enabled(memento.overlapHatLayer);
-        this.headGenerationMethod.setValue(memento.method);
+        this.selectedCategory = memento.category;
         this.searchField.setText(memento.search);
         this.searchField.setCursor(0);
     }
 
     private record HeadGeneratorMemento(String headName, SkinMode skinMode, String skinRowValue, boolean showFavorites,
-                                        boolean overlapHatLayer, HeadGenerationMethod method,
+                                        boolean overlapHatLayer, IHeadCategory category,
                                         String search) implements IMementoObject {
     }
 }
